# fleetweave-robot-api

./: .gitignore  README.md
client_api/: .gitignore  README.md  cyclonedds.xml  robot_params.aws.yaml  ros-mqtt_bridge.md
client_api/bash/: mqttbridge.sh  robot_client.sh
client_api/service/: robot_client_api.service  ros_mqtt_bridge.service
client_api/src/custom_msgs/: CMakeLists.txt  package.xml
client_api/src/custom_msgs/action/: CancelRoute.action  ChangeMap.action  Move2D.action  Plan2D.action
client_api/src/custom_msgs/srv/: StateCheck.srv
client_api/src/py_launch/: package.xml  setup.py
client_api/src/py_launch/launch/: robot_client_api_launch.py
client_api/src/robot_cmd/: package.xml  setup.cfg  setup.py
client_api/src/robot_status/: package.xml  setup.py
client_api/src/test_system/: package.xml  setup.cfg  setup.py
cloud_api/: README.md  pyproject.toml
cloud_api/src/robotcloudapi/: settings.py
cloud_api/src/robotcloudapi/api/: main.py
cloud_api/src/robotcloudapi/api/routers/: admin.py  robots.py
cloud_api/src/robotcloudapi/api/schemas/: robot_status.py
cloud_api/src/robotcloudapi/common/: logging.py  time.py
cloud_api/src/robotcloudapi/domain/models/: robot.py
cloud_api/src/robotcloudapi/gateway/: main.py
cloud_api/src/robotcloudapi/gateway/merge/: status_merger.py
cloud_api/src/robotcloudapi/gateway/mqtt/: client.py  main.py  publisher.py  subscribe.py
cloud_api/src/robotcloudapi/gateway/zenoh/: __init__.py  main.py  publisher.py  sesstion.py  subscribe.py
cloud_api/src/robotcloudapi/infra/redis/: client.py
(+17 files in other folders)
